<?xml version="1.0" encoding="utf-8"?>
<GridLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="2dp"
    android:columnCount="4"
    android:rowCount="5"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Button
        android:id="@+id/btn_clear"
        style="@style/functionButtons"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center"
        android:text="@string/key_clear" />

    <Button
        android:id="@+id/btn_percentage"
        style="@style/functionButtons"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/key_divide" />

    <Button
        android:id="@+id/btn_division"
        style="@style/functionButtons"
        android:layout_row="0"
        android:layout_column="2"
        android:text="@string/key_minus" />

    <Button
        android:id="@+id/btn_multiply"
        style="@style/functionButtons"
        android:layout_row="0"
        android:layout_column="3"
        android:text="@string/key_multy" />

    <Button
        android:id="@+id/btn_7"
        style="@style/numbersButtons"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/key_7" />

    <Button
        android:id="@+id/btn_8"
        style="@style/numbersButtons"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/key_8" />

    <Button
        android:id="@+id/btn_9"
        style="@style/numbersButtons"
        android:layout_row="1"
        android:layout_column="2"
        android:text="@string/key_9" />

    <Button
        android:id="@+id/btn_minus"
        style="@style/functionButtons"
        android:layout_row="1"
        android:layout_column="3"
        android:text="@string/key_minus" />

    <Button
        android:id="@+id/btn_4"
        style="@style/numbersButtons"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/key_4" />

    <Button
        android:id="@+id/btn_5"
        style="@style/numbersButtons"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/key_5" />

    <Button
        android:id="@+id/btn_6"
        style="@style/numbersButtons"
        android:layout_row="2"
        android:layout_column="2"
        android:text="@string/key_6" />

    <Button
        android:id="@+id/btn_plus"
        style="@style/functionButtons"
        android:layout_row="2"
        android:layout_column="3"
        android:text="@string/key_plus" />

    <Button
        android:id="@+id/btn_1"
        style="@style/numbersButtons"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/key_1" />

    <Button
        android:id="@+id/btn_2"
        style="@style/numbersButtons"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/key_2" />

    <Button
        android:id="@+id/btn_3"
        style="@style/numbersButtons"
        android:layout_row="3"
        android:layout_column="2"
        android:text="@string/key_3" />

    <Button
        android:id="@+id/btn_equal"
        style="@style/equalButtons"
        android:layout_row="3"
        android:layout_column="3"
        android:layout_gravity="fill_vertical"
        android:layout_rowSpan="2"
        android:text="@string/key_equal" />

    <Button
        android:id="@+id/btn_dot"
        style="@style/numbersButtons"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/key_dot" />

    <Button
        android:id="@+id/btn_zero"
        style="@style/numbersButtons"
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/key_0" />

    <Button
        android:id="@+id/btn_double_zero"
        style="@style/numbersButtons"
        android:layout_row="4"
        android:layout_column="2"
        android:text="@string/key_00" />

</GridLayout>
