<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:background="@drawable/tem" />

    <EditText
        android:id="@+id/compute"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="textEnd"
        android:textColor="#673AB7"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="20dp"/>

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textAlignment="textEnd"
        android:textColor="#673AB7"
        android:textSize="45sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4">

        <Button
            android:id="@+id/key_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/key_1" />

        <Button
            android:id="@+id/key_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/key_2" />

        <Button
            android:id="@+id/key_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/key_3" />

        <Button
            android:id="@+id/key_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/key_plus" />

        <Button
            android:id="@+id/key_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/key_4" />

        <Button
            android:id="@+id/key_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/key_5" />


        <Button
            android:id="@+id/key_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/key_6" />

        <Button
            android:id="@+id/key_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/key_minus" />

        <Button
            android:id="@+id/key_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/key_7" />

        <Button
            android:id="@+id/key_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/key_8" />

        <Button
            android:id="@+id/key_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/key_9" />

        <Button
            android:id="@+id/key_multy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/key_multy" />


        <Button
            android:id="@+id/key_dot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/key_dot" />

        <Button
            android:id="@+id/key_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/key_0" />

        <Button
            android:id="@+id/key_ravno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/key_ravno" />


        <Button
            android:id="@+id/key_divide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/key_divide" />

    </GridLayout>

</FrameLayout>
